<resources>

    <string name="widget_name" translatable="false">FHEMswitch</string>
    <string name="url_fhem_pl">URL FHEM webserver</string>
    <string name="url_fhem_pl_local">URL FHEM in local net</string>
    <string name="url_fhem_js">URL fhem.js server</string>
    <string name="url_fhem_js_local">URL fhem.js local net</string>
    <string name="conn_pw">fhem.js password</string>
    <string name="is_home_net">Current WLAN (%1$s) is home net</string>

    <string name="ok" translatable="false">OK</string>
    <string name="switchicon">Lamp</string>
    <string name="save">Save</string>
    <string name="error_header">An error has occurred</string>
    <string name="getConfig">read FHEM</string>

    <string name="switches">Switches</string>
    <string name="columns">Columns:</string>
    <string name="lightscenes">Scenarios</string>
    <string name="values">Values</string>
    <string name="values2">Reading</string>
    <string name="unit">Name (sort)</string>
    <string name="name">Display</string>
    <string name="header">Header</string>
    <string name="command">Command</string>
    <string name="noconn">No connection to FHEM server. Tip for reconnection attempt.</string>
    <string name="checkpw">Please check password</string>
    <string name="initruns">Initialising runs</string>
    <string name="urlerr">the typed URL is invalid</string>
    <string name="urlcheck">please check URL</string>
    <string name="onlinecheck">is this server online</string>
    <string name="commands">Custom commands</string>
    <string name="commands2">FHEM command</string>
    <string name="newline" translatable="false">+</string>

    <string name="landscape">Layout Landscape</string>
    <string name="portrait">Layout Portrait</string>
    <string name="horizontal">horizontal</string>
    <string name="vertical">vertical</string>
    <string name="mixed">two columns</string>

    <string-array name="commands">
        <item>toggle</item>
        <item>on</item>
        <item>off</item>
    </string-array>

    <string-array name="confirmTypes">
        <item>no</item>
        <item>off only</item>
        <item>on only</item>
        <item>always</item>
    </string-array>

    <string-array name="colnum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="donate_cancel">Cancel</string>
    <string name="donate_text">For this app I will donate</string>
    <string name="thanks_text">Thank you very much for your donation!</string>
    <string name="donate_google">Donate</string>
    <string name="donate_string_call">optional donation</string>

    <string name="icon" translatable="false">Icon?</string>
    <string name="widget1" translatable="false">Widget 1</string>
    <string name="widget2" translatable="false">Widget 2</string>
    <string name="widget3" translatable="false">Widget 3</string>
    <string name="widget4" translatable="false">Widget 4</string>
    <string name="widget_refresh" translatable="false">FHEMswitch</string>
    <string name="donate_back">Go</string>
    <string name="openstore">Open Play Store</string>
    <string name="donotshow">Don\'t show again</string>
    <string name="rememberlater">Remember tomorrow</string>
    <string name="config_header">FHEMswitch configuration</string>
    <string name="newVersionApp">Version %1$s of this App is installed.\nIn Google Play Store the newest Version %2$s is available.</string>
    <string name="newVersionFhemjs">Version %1$s of fhem.js is installed on the server. In NPM repository Version %2$s is available.</string>
    <string name="installed_version">installed version</string>
    <string name="latest_version">latest_version</string>
    <string name="cancel">Cancel</string>
    <string name="noWidgetMessage">First create widget by moving it to start screen.</string>
    <string name="maxWidgetMessage">Maximum of %1$s widgets reached</string>
    <string name="noconnjs">No connection to fhem.js server possible:</string>
    <string name="adjustable">Adjustable items</string>
    <string name="stepsize">Step size:</string>
    <string name="delay">Command delay in ms:</string>
    <string name="execcmd">FHEM Command for setting value:</string>
    <string name="set">set</string>
    <string name="value">value</string>
    <string name="refresh" translatable="false">Server refresh</string>
    <string name="serverRefresh">Data on server fhem.js refreshed from fhem-server</string>
    <string name="orient" translatable="false">Orient</string>
    <string name="draganddrop" translatable="false">d&amp;d</string>
    <string name="commandsShort">Commands</string>
    <string name="hint">Hint</string>
    <string name="hinttext">Navigate through config parts by horizontal wiping or by touch the tabs on top.</string>
    <string name="control">Control Button</string>
    <string name="new_header">create new header or seperation line</string>
    <string name="removeline" translatable="false">-</string>
    <string name="bullet" translatable="false">\u2022</string>
    <string name="blockheader">Block sequence (order by drag &amp; drop)</string>
    <string name="header_label" translatable="false">*Header</string>
    <string name="seperator_label" translatable="false">*Seperator</string>
    <string name="empty_widget">Empty Widget</string>
    <string name="werteregler">Slider</string>
    <string name="backup" translatable="false">Export</string>
    <string name="restore" translatable="false">Import</string>
    <string name="export_hint">Export of whole configuration (without password) to path %1$s. An existing Backup will be overwritten.</string>
    <string name="import_hint_urls">Import URLs from path %1$s. Widgets must be imported seperatly each.</string>
    <string name="import_hint_widget">Import Widget data from path %1$s.</string>
    <string name="actions">Actions</string>
    <string name="help">Help</string>
    <string name="export_success">Successfully exported configuration to path %1$s</string>
    <string name="export_error">Export was not successful.</string>
    <string name="import_error">Import was not successful. Maybe file is missing or content is corrupted.</string>
    <string name="import_success">The Import of the config was successful.</string>
    <string name="select_widget">Select widget to import.:</string>
    <string name="noCommandsAllowed">During configuration running, sending commands is not possible</string>
    <string name="confirmtext">Force confirm of commands</string>
    <string name="confirmText">Do it!</string>
    <string name="ohnoText">Oh no!</string>
    <string name="confirmQuest">Really execute?</string>
    <string name="switchOn">switch on</string>
    <string name="switchOff">switchOff</string>
    <string name="fhemHome" translatable="false">FHEM Website</string>
    <string name="switchScene">select</string>
    <string name="switchCommand">execute</string>
    <string name="commandsPrompt">Select action</string>
    <string name="confirmsPrompt">Confirm switch of %1$s?</string>
    <string name="cmdName" translatable="false">FHEMcmd</string>
    <string name="title_activity_test" translatable="false">Test</string>

</resources>