<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_version"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/new_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="@string/initruns"
        android:textColor="#ffcc4343"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/new_version_store_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/openstore" />

    <Button
        android:id="@+id/new_version_remember_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rememberlater" />

    <Button
        android:id="@+id/new_version_show_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donotshow" />

</LinearLayout>