<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp">

    <TextView
        android:background="@color/conf_bg_header_2"
        android:id="@+id/config_switch_enqbled"
        android:text=" "/>

    <TextView
        android:background="@color/conf_bg_header_2"
        android:id="@+id/config_switch_unit"
        android:text="@string/unit"
        android:textColor="@color/conf_text_header_2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:background="@color/conf_bg_header_2"
        android:id="@+id/config_switch_name"
        android:textColor="@color/conf_text_header_2"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:background="@color/conf_bg_header_2"
        android:id="@+id/config_switch_cmd"
        android:text="@string/command"
        android:textColor="@color/conf_text_header_2"
        android:textSize="16sp"
        android:textStyle="bold" />
</TableRow>