<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:orientation="vertical">

    <!-- ++++++++++++++++++++ Header 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/config_shape_header_1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="40dp"
            android:paddingTop="3dp"
            android:text="@string/switches"
            android:textColor="@color/conf_text_header_1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingTop="9dp"
            android:text="@string/columns"
            android:textColor="@color/conf_text_header_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/config_switch_cols"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <!-- ++++++++++++++++++++ Header 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/config_shape_header_2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/conf_bg_header_2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/config_switch_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/unit"
                    android:textColor="@color/conf_text_header_2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/config_switch_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="3dp"
                    android:text="@string/name"
                    android:textColor="@color/conf_text_header_2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/config_switch_cmd"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/command"
                    android:textColor="@color/conf_text_header_2"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- ++++++++++++++++++++ Listview -->
            <com.mobeta.android.dslv.DragSortListView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:dslv="com.mobeta.android.dslv"
                android:id="@+id/switches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:dividerHeight="1px"
                android:padding="0dp"
                dslv:collapsed_height="1px"
                dslv:drag_enabled="true"
                dslv:drag_handle_id="@+id/drag_handle"
                dslv:drag_scroll_start="0.33"
                dslv:drag_start_mode="onDown"
                dslv:float_alpha="0.3"
                dslv:float_background_color="#FF666666"
                dslv:slide_shuffle_speed="0.3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>